integration/testData/SampleHTTPRouteConfig.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: petstore-test-1.0.0-1.0.0
  labels:
    version: 1.0.0
spec:
  parentRefs:
  - name: eg
  hostnames:
  - www.apk.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v3/user/login
    - path:
        type: PathPrefix
        value: /api/v3/user/logout
    - path:
        type: PathPrefix
        value: /api/v3/user/createWithList
    - path:
        type: PathPrefix
        value: /api/v3/user/createWithArray
    - path:
        type: PathPrefix
        value: /api/v3/pet/findByTags
    - path:
        type: PathPrefix
        value: /api/v3/pet
    - path:
        type: PathPrefix
        value: /api/v3/user
    - path:
        type: PathPrefix
        value: /api/v3/store/order
    backendRefs:
    - name: httpbin
      port: 80
      group: ""
      kind: Service
